fix: scrollbar always on

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -705,6 +705,10 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+body {
+  overflow-y: scroll;
+}
+
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
